--- a/package.json
+++ b/package.json
@@ -16,9 +16,20 @@
   },
   "license": "MIT",
   "dependencies": {
+    "babel-loader": "^7.0.0",
+    "body-parser": "^1.17.1",
     "consolidate": "^0.14.5",
     "ejs": "^2.5.5",
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "express-fileupload": "^0.1.3",
+    "express-react-views": "^0.10.2",
+    "jquery": "^3.2.1",
+    "mongoose": "^4.9.8",
+    "normalize.css": "^7.0.0",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-svg": "^2.1.21",
+    "react-toastr": "^2.8.2"
   },
   "devDependencies": {
     "browser-sync": "^2.18.5",
@@ -28,13 +39,13 @@
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "file-loader": "^0.10.0",
-    "node-sass": "^4.5.0",
+    "node-sass": "^4.5.2",
     "npm-install-webpack-plugin": "^4.0.4",
     "reload": "^1.1.1",
     "resolve-url-loader": "^2.0.0",
     "sass-loader": "^6.0.1",
     "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
+    "url-loader": "^0.5.8",
     "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.10.1",
     "webpack-hot-middleware": "^2.17.0"
